--- a/local/conf.yml
+++ b/local/conf.yml
@@ -1,12 +1,12 @@
 # filterbank config
 filterbank:
-  n_filters: 512
-  kernel_size: 16
-  stride: 8
+  n_filters: 256
+  kernel_size: 256
+  stride: 64
 # Network config
 deepclustering:
   rnn_type: lstm
-  n_layers: 2
+  n_layers: 4
   hidden_layer_size: 600
   dropout: 0.3
   embedding_dim: 40
@@ -14,13 +14,13 @@ deepclustering:
 # Training config
 training:
   epochs: 200
-  batch_size: 32
+  batch_size: 8
   num_workers: 8
   half_lr: no
   early_stop: yes
 # Optim config
 optim:
-  optimizer: SGD
+  optimizer: rmsprop
   lr: 0.0001
   momentum: 0.9
 # Data config
